OTM-JSON形式での出力に対応．品詞と訳語を記述出来るように対応

--- a/css/wordmaker.css
+++ b/css/wordmaker.css
@@ -22,3 +22,30 @@ h1, h2 {
 button {
 	font-size: 16px;
 }
+
+.zpword {
+	width: 50%;
+	min-width: 360px;
+	max-width: 720px;
+	padding: 5px;
+}
+
+.zpword > .entry {
+	width: 100%;
+}
+
+.zpword > .entry > .form {
+	width: 25%;
+}
+
+.zpword > .translations {
+	width: 100%;
+}
+
+.zpword > .translations .title {
+	width: 25%;
+}
+
+.zpword > .translations .forms {
+	width: 70%;
+}
