画面部分の修正やロジック分けの修正，NtDialogの更新適用，サンプル設定の名称変更など

--- a/css/ntdialog.css
+++ b/css/ntdialog.css
@@ -2,6 +2,11 @@
 .ntdialog {
 	position: absolute;
 	padding: 0;
+	display: none;
+}
+
+.ntdialog.show {
+	display: block;
 }
 
 .ntdialog > .ntdialog-header {
